ESC: (bis) отменить эксклюзивную блокировку - старый вариант

--- a/ESC/history.txt
+++ b/ESC/history.txt
@@ -12,6 +12,10 @@
 программы? Я никого не заставляю и лишь надеюсь  на  то,  что  есть
 люди, готовые подкрепить свои "пасибы" делом...
 
+2014.09.13 (неофициальная)
+~~~~~~~~~~~~~~~~~~~~~~~~~~
+ ! откат эксклюзивной блокировки: http://bugs.farmanager.com/view.php?id=2800
+
 2.91
 ~~~~
  ! bom не работал.
